[project]
name = "quarto-interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.9.0,<7",
    "jupyter>=1.1.1",
    "plotly>=5.24.1",
    "shinylive>=0.8.5", "altair>=6.0.0,<7", "vega-datasets>=0.9.0,<0.10",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
quarto-interactive = { path = ".", editable = true }

[tool.pixi.tasks]
preview = { cmd = "quarto preview ", description = "Preview the project", cwd = "quarto/"}
render = { cmd = "quarto render ", description = "Render the project", cwd = "quarto/"}

[tool.pixi.dependencies]
python = "3.12.*"
quarto = ">=1.8.27,<2"
